[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tekrsa-api-wrap"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }

authors = [
    { name = "The Institute for Telecommunication Sciences" },
]

maintainers = [
    { name="Anthony Romaniello", email="aromaniello@ntia.gov"},
]

keywords = [
    "API", "wrapper", "spectrum", "analyzer", "SDR", "RF",
    "SCOS", "Linux", "Tektronix", "RSA", "radio",
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
    "flit>=3.4,<4",
    "pre-commit>=2.20.0",
]

[project.urls]
"Repository" = "https://github.com/NTIA/tekrsa-api-wrap"
"Bug Tracker" = "https://github.com/NTIA/tekrsa-api-wrap/issues"
"NTIA GitHub" = "https://github.com/NTIA"
"ITS Website" = "https://its.ntia.gov"
"Tektronix Website" = "https://www.tek.com/en"

[tool.flit.module]
name = "rsa_api"
