[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tekrsa-api-wrap"
dynamic = ["version"]
description = "NTIA/ITS Python wrapper for the Tektronix RSA API for Linux"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }

authors = [
    { name = "The Institute for Telecommunication Sciences" },
]

maintainers = [
    { name="Anthony Romaniello", email="aromaniello@ntia.gov"},
]

keywords = [
    "API", "wrapper", "spectrum", "analyzer", "SDR", "RF",
    "SCOS", "Linux", "Tektronix", "RSA", "radio",
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
    "hatchling>=1.6.0,<2.0",
    "pre-commit>=2.20.0",
    "twine>=4.0.1,<5.0",
]

[project.urls]
"Repository" = "https://github.com/NTIA/tekrsa-api-wrap"
"Bug Tracker" = "https://github.com/NTIA/tekrsa-api-wrap/issues"
"NTIA GitHub" = "https://github.com/NTIA"
"ITS Website" = "https://its.ntia.gov"
"Tektronix Website" = "https://www.tek.com/en"

[tool.hatch.version]
path = "src/rsa_api/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rsa_api"]
