[metadata]
name = tekrsa-api-ntia
version = 0.1.0
author = Anthony Romaniello
author_email = aromaniello@ntia.gov
description = NTIA Python wrapper for Tektronix RSA API for Linux
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ntia/tekrsa_api_wrap
project_urls =
	Bug Tracker = https://github.com/ntia/tekrsa_api_wrap/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy

[options.packages.find]
where = src