[metadata]
name = tekrsa-api-wrap
version = 1.0.0
author = The Institute for Telecommunication Sciences
description = NTIA Python wrapper for Tektronix RSA API for Linux
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ntia/tekrsa-api-wrap
project_urls =
	Bug Tracker = https://github.com/ntia/tekrsa-api-wrap/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.21

[options.packages.find]
where = src
